--- a/frontend/portfolio/package.json
+++ b/frontend/portfolio/package.json
@@ -21,10 +21,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "gsap": "^3.13.0",
     "lenis": "^1.3.8",
     "lucide-react": "^0.537.0",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "reactflow": "^11.11.4",
