--- a/.github/workflows/push-frontend.yaml
+++ b/.github/workflows/push-frontend.yaml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
       - name: Checkout Code
-        uses: actions/ch:withcheckout@v5
+        uses: actions/checkout@v5
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -22,8 +22,4 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
         
       - name: Build and Push Multi-PlatformImage
-        run: docker buildx build \
-            --platform linux/amd64,linux/arm64 \
-            -f frontend/Dockerfile \
-            -t jeremymisola/portfolio-frontend:0.0.1 \
-            --push ./frontend
+        run: docker buildx build --platform linux/amd64,linux/arm64 -f frontend/Dockerfile -t jeremymisola/portfolio-frontend:0.0.1 --push ./frontend
